WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89814
RenderText’s minimum preferred width is incorrect if automatic hyphenation is used
https://bugs.webkit.org/show_bug.cgi?id=89814
Summary
RenderText’s minimum preferred width is incorrect if automatic hyphenation is...
mitz
Reported
2012-06-23 12:21:28 PDT
<
rdar://problem/11708902
> RenderText::computePreferredLogicalWidths does not account for the possibility to fit a word in a narrower container by hyphenating it, when 'hyphens: auto' is specified.
Attachments
When computing the minimum width taken up by a hyphenated word, use its widest hyphenated fragment
(8.64 KB, patch)
2012-06-23 12:30 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-06-23 12:30:29 PDT
Created
attachment 149176
[details]
When computing the minimum width taken up by a hyphenated word, use its widest hyphenated fragment
Sam Weinig
Comment 2
2012-06-23 14:12:18 PDT
Comment on
attachment 149176
[details]
When computing the minimum width taken up by a hyphenated word, use its widest hyphenated fragment View in context:
https://bugs.webkit.org/attachment.cgi?id=149176&action=review
> Source/WebCore/ChangeLog:3 > + RenderTextâs minimum preferred width is incorrect automatic hyphenation is used
The apostrophe seems to have had some issues.
mitz
Comment 3
2012-06-23 14:21:33 PDT
(In reply to
comment #2
)
> (From update of
attachment 149176
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=149176&action=review
> > > Source/WebCore/ChangeLog:3 > > + RenderTextâs minimum preferred width is incorrect automatic hyphenation is used > > The apostrophe seems to have had some issues.
The issue you’re referring to is
bug 75394
. Thanks for the review!
mitz
Comment 4
2012-06-23 14:24:02 PDT
Fixed in <
http://trac.webkit.org/r121102
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug